--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="label">Возможности</div>
         <div class="title">Выбор - отличная штука!</div>
         <div class="subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-        <img class="car_img" src="../src/img/car.png" alt="car">
+        <img class="car_img" src="img/car.png" alt="car">
         <div class="bottom">Машины на каждый день.
           <br>Лучше, быстрее и дешевле, чем такси
         </div>
