--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
 
         <div class="special mobile_third">
           <div class="footer_mobile">
-            <a href="#"><img src="../src/icons/app_store.png" alt="app_store"></a>
-            <a href="#"><img src="../src/icons/google_play.png" alt="google_play"></a>
-            <a href="#"><img src="../src/icons/windows_store.png" alt="windows_store"></a>
+            <a href="#"><img src="icons/app_store.png" alt="app_store"></a>
+            <a href="#"><img src="icons/google_play.png" alt="google_play"></a>
+            <a href="#"><img src="icons/windows_store.png" alt="windows_store"></a>
           </div>
         </div>
 
